kqed_dev4/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACT_ID__c</fullName>
        <externalId>true</externalId>
        <label>ACT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to face meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Category__c</fullName>
        <label>Contact Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Contact_Email__c</fullName>
        <inlineHelpText>Email of the contact responsible for the event or the generic email address of the location the responses are to go to.</inlineHelpText>
        <label>Event Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Contact_Phone__c</fullName>
        <inlineHelpText>Phone number of the person or group sponsoring the event.</inlineHelpText>
        <label>Event Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Venue_URL__c</fullName>
        <inlineHelpText>Web page for venue</inlineHelpText>
        <label>Event Venue URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Category__c</fullName>
        <label>Meeting Category</label>
        <picklist>
            <picklistValues>
                <fullName>Face to face meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <externalId>true</externalId>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <picklist>
            <controllingField>Task__c</controllingField>
            <picklistValues>
                <fullName>Producer&apos;s Circle membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signal Society membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Circle membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Society membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check on Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan an event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Auction item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thank you</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>on air credits/donor wall/recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation, staff to set meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation, volunteer to set meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-pager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision/update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting docs needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting, proposal after meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financials only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review lists with volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>invite to cultivation event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposals/Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Techique__c</fullName>
        <label>Techique</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Contact_ID__c</fullName>
        <description>Temporary Contact ID for data load.</description>
        <label>Temp Contact ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Information__c</fullName>
        <label>Ticket Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL use only.</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>Staff</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_Interaction_id__c</fullName>
        <description>Short interaction id, to only store the most recent interaction event.</description>
        <externalId>true</externalId>
        <label>TA Interaction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>Ken_s_Open_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Yan</value>
        </filters>
        <label>Ken&apos;s Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>